feat: add scalar docs
