# internal/handler/user.go
@@ -34,11 +34,10 @@ func (h *UserHandler) Login(c *gin.Context) {
 	api.HandleSuccess(c, 200, "OK", data)
 }
 
-// Ping godoc
 // @Summary Get Profile
 // @Security BearerAuth
 // @Description Returns User
-// @Tags user
+// @Tags User
 // @Produce json
 // @Success 200 {object} form.UserResponse
 // @Router /user/me [get]
@@ -54,6 +53,13 @@ func (h *UserHandler) Me(c *gin.Context) {
 	api.HandleSuccess(c, 200, "OK", user)
 }
 
+// @Summary Update Profile
+// @Security BearerAuth
+// @Description Returns Status of Update
+// @Tags User
+// @Produce plain
+// @Success 200 {string} string
+// @Router /user [patch]
 func (h *UserHandler) UpdateProfile(c *gin.Context) {
 	userId := GetUserIdFromCtx(c)
 	var updateUserForm form.UpdateUserRequest
